fix overflow issue

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -99,7 +99,7 @@ small { font-size: 80%; }
 
 .slide {
     width:100%;
-    height:100%;
+    min-height:100%;
     position: relative;
 }
 
